--- a/otp.html
+++ b/otp.html
@@ -30,10 +30,9 @@
 	<title>OTP</title>
 </head>
 <body>
-    
-    <div top-section>
-        <a href="forgot_password.html"><span class="material-icons">west</span></a>
-    </div>
+
+    <!--Page Arrow-->
+    <div tab-left-icon-ab><button><a href="forgot_password.html"><span class="material-icons-outlined">arrow_back</span></a></button></div>
 
 
     <!-- OTP Container-->
