--- a/registration_success.html
+++ b/registration_success.html
@@ -33,7 +33,7 @@
     
 
 
-    <!--Forgot Password Outer Container-->
+    <!--success Outer Container-->
     <section outer-container>
 
         <div inner-container>
