--- a/registration_success.html
+++ b/registration_success.html
@@ -44,7 +44,7 @@
                     <h1>Welcome</h1>
                     <h3>Your Registration Was Successfull</h3>
 
-                    <a href="survey.html">Go To Survey</a>
+                    <a href="survey_new.html">Go To Survey</a>
                 </div>
             </div>
         </div>
